src/generators/web/ui/index.css
@import '@node-core/ui-components/styles/index.css';
@import '@node-core/rehype-shiki/index.css';

/* Fonts */
:root {
  --font-open-sans: 'Open Sans', sans-serif;
  --font-ibm-plex-mono: 'IBM Plex Mono', monospace;
}

main {
  overflow-x: scroll;

  /* Code should inherit its font size */
  code {
    font-size: inherit;
    font-weight: inherit;
  }

  /* Don't overflow the parent */
  .overflow-container {
    overflow-x: auto;
    width: 100%;
  }

  table {
    /* In tables, don't pad `a` elements */
    a {
      padding-right: unset;
    }
  }

  /* Change history positioning */
  div:has(> h1, > h2, > h3, > h4, > h5, > h6) {
    display: flex;
    align-items: center;
    gap: 8px;

    > h1,
    > h2,
    > h3,
    > h4,
    > h5,
    > h6 {
      flex: 1;
      text-overflow: ellipsis;
      overflow: hidden;
      white-space: nowrap;
    }

    .change-history {
      margin-left: auto;
    }
  }

  .arrow {
    /* Arrow icon styling */
    width: calc(var(--spacing, 0.25rem) * 3);
    display: inline;
    margin-left: var(--spacing, 0.25rem);
  }

  .signature {
    /* Signature styling - remove line numbers and padding */
    .line {
      padding-left: unset !important;

      &::after {
        all: unset !important;
      }
    }
  }
}

#modalContent li > div > a {
  max-width: 42rem;
  > svg {
    flex-shrink: 0;
  }
  > div {
    min-width: 0;
    > p {
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }
  }
}

